--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -14,6 +14,7 @@
                     <h5 class="card-title">[[${pet.name}]]</h5>
                     <hr>
                     <p class="card-text"><b>Cins:</b> [[${pet.genus.value}]]</p>
+                    <p class="card-text"><b>Tür:</b> [[${pet.species}]]</p>
                     <p class="card-text"><b>Yaş Bilgisi: </b> [[${ageInfo}]]</p>
                     <p class="card-text"><b>Doğum Tarihi:</b> [[${#dates.format(pet.birthDate, 'dd/MMM/yyyy')}]]</p>
                     <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy
