--- a/src/main/resources/templates/pet/editForm.html
+++ b/src/main/resources/templates/pet/editForm.html
@@ -31,14 +31,12 @@
                         <label for="name" class="form-label">İsim</label>
                         <input type="text" class="form-control" th:field="*{name}" id="name">
                     </div>
-
                     <div class="mb-3">
                         <label for="birthDate" class="form-label">Doğum Tarihi</label>
                         <input type="date" class="form-control" th:field="*{birthDate}" id="birthDate"
                                th:attr="max=${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}"
                         >
                     </div>
-
                     <div class="mb-3">
                         <label for="genus" class="form-label">Cinsi</label>
                         <select class="form-select" th:field="*{genus}" id="genus">
@@ -49,11 +47,15 @@
                         </select>
                     </div>
                     <div class="mb-3">
+                        <label for="species" class="form-label">Tür</label>
+                        <input type="text" class="form-control" th:field="*{species}" id="species">
+                    </div>
+                    <div class="mb-3">
                         <label for="owner" class="form-label">Hayvan Sahibi</label>
-                        <select class="form-select" th:field="*{owner}" id="owner">
+                        <select class="form-select" name="owner" id="owner">
                             <option th:selected="${pet.owner==null}" value="">Lütfen seçim yapınız.</option>
-                            <th:block th:each="owner : ${owners}">
-                                <option th:value="${owner.id}" th:text="${owner.fullName}"></option>
+                            <th:block th:each="o : ${owners}">
+                                <option th:value="${o.id}" th:text="${o.fullName}"></option>
                             </th:block>
                         </select>
                     </div>
