--- a/src/main/resources/templates/pet/search.html
+++ b/src/main/resources/templates/pet/search.html
@@ -39,7 +39,7 @@
             <tr>
                 <th scope="col">İsim</th>
                 <th scope="col">Yaş</th>
-                <th scope="col">Tür</th>
+                <th scope="col">Cins/Tür</th>
                 <th scope="col">Sahibi</th>
                 <th scope="col">Kayıt Tarihi</th>
                 <th scope="col">Güncellenme Tarihi</th>
@@ -49,8 +49,8 @@
             <tbody>
             <tr th:each="pet : ${pets}">
                 <td class="text-capitalize">[[${pet.name}]]</span></td>
+                <td>[[${pet.genus.value}]]<span th:if="${pet.species}">/[[${pet.species}]]</span></td>
                 <td>[[${pet.birthDate}]]</td>
-                <td>[[${pet.genus.value}]]</td>
                 <td th:if="${pet.owner != null}">[[${pet.owner.fullName}]]</td>
                 <td th:unless="${pet.owner != null}"></td>
                 <td>[[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</td>
