--- a/src/main/resources/templates/pet/addForm.html
+++ b/src/main/resources/templates/pet/addForm.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
+<html lang="tr" xmlns:th="http://www.thymeleaf.org"
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>VetApp | Yeni Hayvan Ekle</title>
+    <meta charset="UTF-8">
+    <title>Ana Sayfa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 
-<section>
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">
+            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
+            VetApp
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
+                <a class="nav-link" th:href="@{/species}">Türler</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="container mt-5">
     <div class="col-md-6 mx-auto">
         <h4>Yeni Hayvan</h4>
         <hr>
@@ -30,16 +53,24 @@
                         <label for="genus" class="form-label">Cins</label>
                         <select class="form-select" th:field="*{genus}" id="genus">
                             <option value="">Lütfen seçim yapın...</option>
-                            <option th:each="g : ${genus}" th:value="${g.key}" th:text="${g.value}"></option>
+                            <option class="text-capitalize" th:each="genus : ${genera}" th:value="${genus.id}"
+                                     th:text="${genus.name}"></option>
                         </select>
                     </div>
+
                     <div class="mb-3">
                         <label for="species" class="form-label">Tür</label>
-                        <input type="text" class="form-control" th:field="*{species}" id="species">
+                        <select class="form-select text-capitalize" th:field="*{species}" id="species">
+                            <option value="">Lütfen seçim yapınız</option>
+                            <th:block th:each="s : ${species}">
+                                <option th:value="${s.id}" th:text="${s.name}"></option>
+                            </th:block>
+                        </select>
                     </div>
+
                     <div class="mb-3">
                         <label for="owner" class="form-label">Hayvan Sahibi</label>
-                        <select class="form-select" th:field="*{owner}" id="owner">
+                        <select class="form-select text-capitalize" th:field="*{owner}" id="owner">
                             <option value="">Lütfen seçim yapın...</option>
                             <option th:each="o : ${owners}" th:value="${o.id}" th:text="${o.fullName}"
                                     th:selected="${ownerId == o.id}"></option>
@@ -54,7 +85,40 @@
             </div>
         </div>
     </div>
-</section>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+            $("#genus").change(function () {
+                var genusId = this.value;
+                console.log(genusId)
+                if (genusId > 0) {
+                    $.ajax({
+                        url: '/species/get-species',
+                        type: 'POST',
+                        data: {genusId: genusId},
+                        dataType: 'json',
+                        success: function (response) {
+                            console.log(response);
+                            var len = response.length;
+                            $("#species").empty();
+                            for (var i = 0; i < len; i++) {
+                                var id = response[i]['id'];
+                                var name = response[i]['name'];
+                                $("#species").append("<option class='text-capitalize' value=" + id + ">" + name +
+                                    "</option>");
+                            }
+                        }
+                    });
+                } else {
+                    $("#species").empty();
+                    $("#species").append("<option value=''>Lütfen cins seçimi yapın</option>");
+                }
+            });
+        }
+    )
+</script>
 
 </body>
 </html>
