--- a/src/main/resources/templates/pet/editForm.html
+++ b/src/main/resources/templates/pet/editForm.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
+<html lang="tr" xmlns:th="http://www.thymeleaf.org"
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>VetApp | Yeni Hayvan Ekle</title>
+    <meta charset="UTF-8">
+    <title>Ana Sayfa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 
-<section>
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">
+            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
+            VetApp
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
+                <a class="nav-link" th:href="@{/species}">Türler</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="container mt-5">
     <div class="col-md-6 mx-auto">
         <div class="d-flex justify-content-between">
             <div>
@@ -24,7 +47,7 @@
                 <form th:action="@{/pets/edit/{id}(id=${pet.id})}" th:object="${pet}" method="post">
                     <div th:if="${#fields.hasErrors()}" class="alert alert-danger" role="alert">
                         <ul>
-                            <li th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
+                            <li th:each="err : ${#fields.allErrors()}" th:text="${err}"></li>
                         </ul>
                     </div>
                     <div class="mb-3">
@@ -38,24 +61,30 @@
                         >
                     </div>
                     <div class="mb-3">
-                        <label for="genus" class="form-label">Cinsi</label>
-                        <select class="form-select" th:field="*{genus}" id="genus">
-                            <option value="">Lütfen seçim yapın...</option>
-                            <option th:each="g : ${genus}" th:value="${g.key}" th:text="${g.value}"
-                                    th:selected="${g.key==pet.genus}"
-                            ></option>
+                        <label for="genus" class="form-label">Cins</label>
+                        <select class="form-select text-capitalize" th:field="*{genus}" id="genus">
+                            <option th:selected="${pet.genus==null}" value="">Lütfen seçim yapın...</option>
+                            <th:block th:each="genus : ${genera}">
+                                <option th:value="${genus.id}" th:text="${genus.name}"></option>
+                            </th:block>
                         </select>
                     </div>
+
                     <div class="mb-3">
                         <label for="species" class="form-label">Tür</label>
-                        <input type="text" class="form-control" th:field="*{species}" id="species">
+                        <select class="form-select text-capitalize" th:field="*{species}" id="species">
+                            <th:block th:each="s : ${species}">
+                                <option th:value="${s.id}" th:text="${s.name}"></option>
+                            </th:block>
+                        </select>
                     </div>
+
                     <div class="mb-3">
                         <label for="owner" class="form-label">Hayvan Sahibi</label>
-                        <select class="form-select" name="owner" id="owner">
+                        <select class="form-select text-capitalize" th:field="*{owner}" id="owner">
                             <option th:selected="${pet.owner==null}" value="">Lütfen seçim yapınız.</option>
-                            <th:block th:each="o : ${owners}">
-                                <option th:value="${o.id}" th:text="${o.fullName}"></option>
+                            <th:block th:each="owner : ${owners}">
+                                <option th:value="${owner.id}" th:text="${owner.fullName}"></option>
                             </th:block>
                         </select>
                     </div>
@@ -68,7 +97,39 @@
             </div>
         </div>
     </div>
-</section>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+            $("#genus").change(function () {
+                var genusId = this.value;
+                console.log(genusId)
+                if (genusId > 0) {
+                    $.ajax({
+                        url: '/species/get-species',
+                        type: 'POST',
+                        data: {genusId: genusId},
+                        dataType: 'json',
+                        success: function (response) {
+                            console.log(response);
+                            var len = response.length;
+                            $("#species").empty();
+                            for (var i = 0; i < len; i++) {
+                                var id = response[i]['id'];
+                                var name = response[i]['name'];
+                                $("#species").append("<option value=" + id + ">" + name + "</option>");
+                            }
+                        }
+                    });
+                } else {
+                    $("#species").empty();
+                    $("#species").append("<option value=''>Lütfen cins seçimi yapın</option>");
+                }
+            });
+        }
+    )
+</script>
 
 </body>
 </html>
