--- a/src/main/resources/templates/pet/index.html
+++ b/src/main/resources/templates/pet/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
+<html lang="tr" xmlns:th="http://www.thymeleaf.org"
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>VetApp | Hayvanlar</title>
+    <meta charset="UTF-8">
+    <title>Ana Sayfa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 
-<section>
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">
+            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
+            VetApp
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
+                <a class="nav-link" th:href="@{/species}">Türler</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="container mt-5">
     <h2>Hayvanlar</h2>
     <hr>
     <div class="d-flex justify-content-between">
@@ -38,7 +61,8 @@
             <thead>
             <tr>
                 <th scope="col">İsim</th>
-                <th scope="col">Cins/Tür</th>
+                <th scope="col">Cins</th>
+                <th scope="col">Tür</th>
                 <th scope="col">Sahibi</th>
                 <th scope="col">Yaş Bilgisi</th>
                 <th scope="col">Doğum Tarihi</th>
@@ -49,7 +73,10 @@
             <tbody>
             <tr th:each="pet : ${pets}">
                 <td class="text-capitalize">[[${pet.name}]]</span></td>
-                <td>[[${pet.genus.value}]]<span th:if="${pet.species}">/[[${pet.species}]]</span></td>
+                <td th:if="${pet.genus}">[[${pet.genus.name}]]</td>
+                <td th:unless="${pet.genus}"></td>
+                <td th:if="${pet.species}">[[${pet.species.name}]]</td>
+                <td th:unless="${pet.species}"></td>
                 <td th:if="${pet.owner != null}">[[${pet.owner.fullName}]]</td>
                 <td th:unless="${pet.owner != null}"></td>
                 <td th:text="${@petServiceImpl.getAgeInfo(pet.id)}"></td>
@@ -95,7 +122,7 @@
             </ul>
         </nav>
     </div>
-</section>
+</div>
 
 </body>
 </html>
