--- a/src/main/resources/templates/pet/search.html
+++ b/src/main/resources/templates/pet/search.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
+<html lang="tr" xmlns:th="http://www.thymeleaf.org"
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>VetApp | Hayvanlar</title>
+    <meta charset="UTF-8">
+    <title>Ana Sayfa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 
-<section>
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">
+            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
+            VetApp
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
+                <a class="nav-link" th:href="@{/species}">Türler</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="container mt-5">
     <h2>Arama Ekranı</h2>
     <hr>
     <div class="d-flex justify-content-between">
@@ -95,7 +118,7 @@
             </ul>
         </nav>
     </div>
-</section>
+</div>
 
 </body>
 </html>
