--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org" th:replace="layout :: layout(~{::title}, ~{::section})">
+<html lang="tr" xmlns:th="http://www.thymeleaf.org"
+<!DOCTYPE html>
+<html lang="tr" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>VetApp | [[${pet.name}]]</title>
+    <meta charset="UTF-8">
+    <title>Ana Sayfa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 
-<section>
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">
+            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
+            VetApp
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
+                <a class="nav-link" th:href="@{/species}">Türler</a>
+            </div>
+        </div>
+    </div>
+</nav>
 
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
             <div class="card text-dark bg-light" style="min-height: 450px;">
                 <div class="card-body">
-                    <h5 class="card-title">[[${pet.name}]]</h5>
+                    <h5 class="card-title text-capitalize">[[${pet.name}]]</h5>
                     <hr>
-                    <p class="card-text"><b>Cins:</b> [[${pet.genus.value}]]</p>
-                    <p class="card-text"><b>Tür:</b> [[${pet.species}]]</p>
+                    <p class="card-text text-capitalize"><b>Cins:</b>
+                        <span th:if="${pet.genus != null}">[[${pet.genus.name}]]</span>
+                    </p>
+                    <p class="card-text text-capitalize"><b>Tür:</b>
+                        <span th:if="${pet.species != null}">[[${pet.species.name}]]</span>
+                    </p>
                     <p class="card-text"><b>Yaş Bilgisi: </b> [[${ageInfo}]]</p>
                     <p class="card-text"><b>Doğum Tarihi:</b> [[${#dates.format(pet.birthDate, 'dd/MMM/yyyy')}]]</p>
-                    <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy
-                        HH:mm')}]]</p>
-                    <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy
-                        HH:mm')}]]</p>
+                    <p class="card-text"><b>Güncellenme Tarihi:</b>
+                        [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</p>
+                    <p class="card-text"><b>Güncellenme Tarihi:</b>
+                        [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}]]</p>
                     <p class="card-text"><b>Açıklama:</b> [[${pet.description}]]</p>
-
                 </div>
                 <div class="card-footer text-muted">
                     <div class="row g-2">
@@ -70,8 +95,7 @@
             </div>
         </div>
     </div>
-
-</section>
+</div>
 
 </body>
 </html>
