--- a/src/main/resources/templates/genus/editForm.html
+++ b/src/main/resources/templates/genus/editForm.html
@@ -26,7 +26,7 @@
                     <div th:replace="fragments/components :: form-error"></div>
                     <div class="mb-3">
                         <label for="name" class="form-label">Cins Adı</label>
-                        <input type="text" class="form-control" th:field="*{name}" id="name">
+                        <input type="text" class="form-control text-capitalize" th:field="*{name}" id="name">
                     </div>
                     <button type="submit" class="btn btn-success">Kaydet</button>
                 </form>
