--- a/src/main/resources/templates/genus/show.html
+++ b/src/main/resources/templates/genus/show.html
@@ -15,7 +15,7 @@
     <div class="col-md-6 mx-auto">
         <div class="card text-dark bg-light mt-2">
             <div class="card-body">
-                <h5 class="card-title">[[${genus.name}]]</h5>
+                <h5 class="card-title text-capitalize">[[${genus.name}]]</h5>
             </div>
             <div class="card-footer text-muted">
                 <div class="row g-2">
