--- a/src/main/resources/templates/owner/editForm.html
+++ b/src/main/resources/templates/owner/editForm.html
@@ -29,7 +29,7 @@
                     <div th:replace="fragments/components :: form-error"></div>
                     <div class="mb-3">
                         <label for="fullName" class="form-label">Ad Soyad</label>
-                        <input type="text" class="form-control" th:field="*{fullName}" id="fullName">
+                        <input type="text" class="form-control text-capitalize" th:field="*{fullName}" id="fullName">
                     </div>
                     <div class="mb-3">
                         <label for="telephoneNumber" class="form-label">Telefon</label>
