--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -10,6 +10,8 @@
 <div th:replace="fragments/components :: navbar"></div>
 
 <div class="container mt-5">
+
+    <div th:replace="fragments/components :: message"></div>
     <div class="row">
         <div class="col-md-6">
             <div th:replace="fragments/pet-components :: profile-card"></div>
