--- a/src/main/resources/templates/species/editForm.html
+++ b/src/main/resources/templates/species/editForm.html
@@ -26,11 +26,11 @@
                     <div th:replace="fragments/components :: form-error"></div>
                     <div class="mb-3">
                         <label for="name" class="form-label">Tür Adı</label>
-                        <input type="text" class="form-control" th:field="*{name}" id="name">
+                        <input type="text" class="form-control text-capitalize" th:field="*{name}" id="name">
                     </div>
                     <div class="mb-3">
                         <label for="genus" class="form-label">Cins</label>
-                        <select class="form-select" th:field="*{genus}" id="genus">
+                        <select class="form-select text-capitalize" th:field="*{genus}" id="genus">
                             <option th:selected="${species.genus == null}" value="">Lütfen seçim yapınız.</option>
                             <th:block th:each="genus : ${genera}">
                                 <option th:value="${genus.id}" th:text="${genus.name}"></option>
